<resources>
    <string name="app_name">Placeholder</string>
    <string name="title_activity_tab_fragments">TabFragments</string>
    <string name="tab_text_1">Menu</string>
    <string name="tab_text_2">Orders</string>
    <string name="tab_text_3">Account</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_4">Settings</string>
    <string name="bowls">Bowls</string>
    <string name="title_activity_bowls">bowls</string>
    <string name="sides">sides</string>
    <string name="drinks">drinks</string>
    <string name="desserts">desserts</string>
    <string name="cart">cart</string>
    <string name="workInProgress">workInProgress</string>
    <string name="CreateYourOwnBowl">Create Your Own Bowl</string>
    <string name="PremadeBowls">Premade Bowls</string>
    <string name="entername">Enter Name</string>
    <string name="enteremail">Enter e-mail</string>
    <string name="enterpassword">Enter Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
